--- a/index.html
+++ b/index.html
@@ -4,8 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>LuckyParadise</title>
-  <link href="https://fonts.googleapis.com/css2?family=Kanit&display=swap" rel="stylesheet">
-
+  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@700;800&display=swap" rel="stylesheet">
 
 <!-- Dentro del <head> -->
 <script>
@@ -25,7 +24,7 @@ fbq('track', 'PageView');
   
    <style>
         body {
-            font-family: 'Kanit', sans-serif;
+            font-family: 'Montserrat', sans-serif;
             background-color: #0a3718;
             text-align: center;
             color: white;
@@ -47,7 +46,7 @@ fbq('track', 'PageView');
         }
 
         h1 {
-            font-family: 'Kanit', sans-serif;
+            font-family: 'Montserrat', sans-serif;
             font-size: 28px;
             margin-bottom: 20px;
         }
