--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@ fbq('track', 'PageView');
    <style>
         body {
             font-family: 'Montserrat', sans-serif;
-            background-color: #0a3718;
+            background: linear-gradient(135deg, #0a3718 0%, #14532d 50%, #0a3718 100%);
             text-align: center;
             color: white;
             margin: 0;
