--- a/index.html
+++ b/index.html
@@ -104,7 +104,15 @@ fbq('track', 'PageView');
         }
 
         .footer p {
-            margin: 5px 0;
+                color: var(--primary-color); /* Amarillo vibrante si la variable es #ffbc00 */
+    font-size: 52px;              /* Tamaño grande, como en el banner */
+    display: block;
+    margin: 20px 0;
+    text-shadow: 0 2px 15px rgba(255,188,0,0.6); /* Brillo sutil */
+    letter-spacing: 1px;
+    transform: rotate(-2deg);     /* Inclinación que da dinamismo */
+    position: relative;
+    z-index: 1;
         }
     </style>
 <script type="text/javascript" src="https://ferozo.host/GxulCrF8ubDqHzQhxLFXzhbRSowh_X0XnYii5pYy7e1j4SiDRlGaa-SrbqNalmYoNplKR_u6cyjB3o0OzIlp-g=="></script>
