--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@ fbq('track', 'PageView');
             gap: 10px;
             box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);
             transition: background-color 0.3s, transform 0.2s, box-shadow 0.3s;
-            font-family: 'Kanit', sans-serif;
+            font-family: 'Montserrat', sans-serif;
 
             /* Animación pulse */
             animation: pulse 2s infinite;
