--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@ fbq('track', 'PageView');
 
         <div class="footer">
             <p style="color: #efb810;">100% EN TU PRIMERA CARGA!!</p>
-            <p>Mínimo de Carga $1000</p>
+            <h1>Mínimo de Carga $1000</h1>
         </div>
     </div>
 
