--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@ fbq('track', 'PageView');
    <style>
         body {
             font-family: 'Montserrat', sans-serif;
-            background: radial-gradient(circle at 30% 30%, #0a3718, #071e0d, #0a3718);
+            background: linear-gradient(135deg, #0a3718, #07280e);
             text-align: center;
             color: white;
             margin: 0;
