--- a/index.html
+++ b/index.html
@@ -51,9 +51,8 @@ fbq('track', 'PageView');
   animation: glow 2s infinite;
   position: relative;
   overflow: hidden;
-  flex-shrink: 0; /* ← asegura que no se achique dentro de un flex */
+  flex-shrink: 0;
 }
-
 
 .avatar img {
   width: 90%;
@@ -61,25 +60,26 @@ fbq('track', 'PageView');
   object-fit: cover;
   border-radius: 50%;
   z-index: 2;
-  position: relative;
   padding: 5px;
+  position: relative;
 }
 
-/* Shine bar efecto dentro del avatar (opcional) */
-.avatar::before {
+/* Brillo animado sin interferir en layout */
+.avatar::after {
   content: "";
   position: absolute;
   top: 0;
-  left: -100%;
-  width: 100%;
-  height: 100%;
-  background: linear-gradient(120deg, transparent, rgba(255,255,255,0.4), transparent);
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background: linear-gradient(120deg, transparent, rgba(255,255,255,0.3), transparent);
   transform: rotate(45deg);
-  animation: shine 2.5s infinite;
   z-index: 1;
+  pointer-events: none;
+  animation: shine 2.5s infinite;
 }
 
-/* Glow y shine animaciones */
+/* Animaciones */
 @keyframes glow {
   0%, 100% {
     box-shadow: 0 5px 20px rgba(255,188,0,0.5);
