--- a/index.html
+++ b/index.html
@@ -47,11 +47,9 @@ fbq('track', 'PageView');
   display: flex;
   align-items: center;
   justify-content: center;
-  box-shadow: 0 5px 20px rgba(255,188,0,0.5);
-  animation: glow 2s infinite;
-  position: relative;
+  box-shadow: 0 0 25px rgba(255, 188, 0, 0.6), 0 0 60px rgba(255, 140, 0, 0.4);
+  animation: pulseGlow 2s infinite;
   overflow: hidden;
-  flex-shrink: 0;
 }
 
 .avatar img {
@@ -59,42 +57,16 @@ fbq('track', 'PageView');
   height: 90%;
   object-fit: cover;
   border-radius: 50%;
-  z-index: 2;
   padding: 5px;
-  position: relative;
 }
 
-/* Brillo animado sin interferir en layout */
-.avatar::after {
-  content: "";
-  position: absolute;
-  top: 0;
-  left: 0;
-  right: 0;
-  bottom: 0;
-  background: linear-gradient(120deg, transparent, rgba(255,255,255,0.3), transparent);
-  transform: rotate(45deg);
-  z-index: 1;
-  pointer-events: none;
-  animation: shine 2.5s infinite;
-}
-
-/* Animaciones */
-@keyframes glow {
+/* Glow animado suave */
+@keyframes pulseGlow {
   0%, 100% {
-    box-shadow: 0 5px 20px rgba(255,188,0,0.5);
+    box-shadow: 0 0 25px rgba(255, 188, 0, 0.6), 0 0 60px rgba(255, 140, 0, 0.4);
   }
   50% {
-    box-shadow: 0 8px 30px rgba(255,188,0,0.8);
-  }
-}
-
-@keyframes shine {
-  0% {
-    transform: translateX(-100%) rotate(45deg);
-  }
-  100% {
-    transform: translateX(100%) rotate(45deg);
+    box-shadow: 0 0 35px rgba(255, 188, 0, 0.9), 0 0 80px rgba(255, 140, 0, 0.6);
   }
 }
 
