--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@ fbq('track', 'PageView');
   
     <div class="container">
 
-        <img src="logo.jpeg" alt="logo" class="logo">
+        <img src="avatar.jpeg" alt="logo" class="logo">
         <h1>ENVIANOS UN WHATSAPP PARA CREAR TU CUENTA</h1>
         
         <!-- Botón con llamada a la función de JavaScript -->
