--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@ fbq('track', 'PageView');
    <style>
         body {
             font-family: 'Montserrat', sans-serif;
-            background: linear-gradient(145deg, #0a3718, #1f4e2b, #ffbc00);
+            background: radial-gradient(circle at center, #0a3718 0%, #093017 40%, #041e10 100%);
             text-align: center;
             color: white;
             margin: 0;
