--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@ fbq('track', 'PageView');
    <style>
         body {
             font-family: 'Montserrat', sans-serif;
-            background: radial-gradient(circle at center, #0a3718 0%, #093017 40%, #041e10 100%);
+            background: linear-gradient(135deg, #0a3718, #14532d, #0a3718);
             text-align: center;
             color: white;
             margin: 0;
