--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@ fbq('track', 'PageView');
    <style>
         body {
             font-family: 'Montserrat', sans-serif;
-            background: linear-gradient(135deg, #0a3718, #14532d, #0a3718);
+            background: linear-gradient(145deg, #0a3718, #1f4e2b, #ffbc00);
             text-align: center;
             color: white;
             margin: 0;
