--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <title>LuckyParadise</title>
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@700;800&display=swap" rel="stylesheet">
 
-<!-- Dentro del <head> -->
+<!-- Meta Pixel Code -->
 <script>
 !function(f,b,e,v,n,t,s)
 {if(f.fbq)return;n=f.fbq=function(){n.callMethod?
@@ -16,9 +16,13 @@ n.queue=[];t=b.createElement(e);t.async=!0;
 t.src=v;s=b.getElementsByTagName(e)[0];
 s.parentNode.insertBefore(t,s)}(window, document,'script',
 'https://connect.facebook.net/en_US/fbevents.js');
-fbq('init', '1766546837196355');
+fbq('init', '1735225596980897');
 fbq('track', 'PageView');
 </script>
+<noscript><img height="1" width="1" style="display:none"
+src="https://www.facebook.com/tr?id=1735225596980897&ev=PageView&noscript=1"
+/></noscript>
+<!-- End Meta Pixel Code -->
 
 </head>
   
@@ -149,24 +153,21 @@ fbq('track', 'PageView');
   
 <body>
   
-<noscript>
-  <img height="1" width="1" style="display:none"
-  src="https://www.facebook.com/tr?id=1766546837196355&ev=PageView&noscript=1" />
-</noscript>
+
   
     <div class="container">
 
-        <img src="avatar.jpeg" alt="logo" class="logo">
+        <img src="avatar.jpg" alt="logo" class="logo">
         <h1>ENVIANOS UN WHATSAPP PARA CREAR TU CUENTA</h1>
         
         <!-- Botón con llamada a la función de JavaScript -->
         <a href="#" class="cta-btn" onclick="openRandomLink()">
-            <span>DUPLICAMOS TU PRIMERA CARGA!</span>
+            <span>TOCA ACA Y RECLAMA TU BONO!</span>
             <img src="whatsapp.png" alt="WhatsApp" class="whatsapp-icon">
         </a>
 
         <div class="footer">
-            <p style="color: #efb810;">100% EN TU PRIMERA CARGA!!</p>
+            <p style="color: #efb810;">Con tu primer depósito te regalamos $1.000</p>
             <h1>Mínimo de Carga $1000</h1>
         </div>
     </div>
@@ -175,14 +176,20 @@ fbq('track', 'PageView');
         function openRandomLink() {
             const links = [
 
-'https://wa.me/5491137616068?text=Hola%2C%20quiero%20mi%20usuario',
-'https://wa.me/5491137577945?text=Hola%2C%20quiero%20mi%20usuario',
-'https://wa.me/5491137608189?text=Hola%2C%20quiero%20mi%20usuario',
-'https://wa.me/5491154600592?text=Hola%2C%20quiero%20mi%20usuario',
-'https://wa.me/5491137612289?text=Hola%2C%20quiero%20mi%20usuario',
-'https://wa.me/5491133216199?text=Hola%2C%20quiero%20mi%20usuario',
-'https://wa.me/5491171318336?text=Hola%2C%20quiero%20mi%20usuario',
-'https://wa.me/5491155177784?text=Hola%2C%20quiero%20mi%20usuario'
+'https://wa.me/5214424389210?text=Hola%20quiero%20mi%20usuario%20y%20mi%20bono%20de%20bienvenida',
+'https://wa.me/5511947485309?text=Hola%20quiero%20mi%20usuario%20y%20mi%20bono%20de%20bienvenida',
+'https://wa.me/5493584209172?text=Hola%20quiero%20mi%20usuario%20y%20mi%20bono%20de%20bienvenida',
+'https://wa.me/5493585142963?text=Hola%20quiero%20mi%20usuario%20y%20mi%20bono%20de%20bienvenida',
+'https://wa.me/554184698001?text=Hola%20quiero%20mi%20usuario%20y%20mi%20bono%20de%20bienvenida',
+'https://wa.me/5527998748235?text=Hola%20quiero%20mi%20usuario%20y%20mi%20bono%20de%20bienvenida',
+'https://wa.me/59163026150?text=Hola%20quiero%20mi%20usuario%20y%20mi%20bono%20de%20bienvenida',
+'https://wa.me/5493584324398?text=Hola%20quiero%20mi%20usuario%20y%20mi%20bono%20de%20bienvenida',
+'https://wa.me/5493585745947?text=Hola%20quiero%20mi%20usuario%20y%20mi%20bono%20de%20bienvenida',
+'https://wa.me/5493585718103?text=Hola%20quiero%20mi%20usuario%20y%20mi%20bono%20de%20bienvenida',
+'https://wa.me/5493585718102?text=Hola%20quiero%20mi%20usuario%20y%20mi%20bono%20de%20bienvenida',
+'https://wa.me/6282145614079?text=Hola%20quiero%20mi%20usuario%20y%20mi%20bono%20de%20bienvenida',
+'https://wa.me/6283167303127?text=Hola%20quiero%20mi%20usuario%20y%20mi%20bono%20de%20bienvenida'
+
 
 
             ];
