--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@ src="https://www.facebook.com/tr?id=1735225596980897&ev=PageView&noscript=1"
    <style>
         body {
             font-family: 'Montserrat', sans-serif;
-            background: linear-gradient(145deg, #0a3718, #1f4e2b, #ffbc00);
+            background: linear-gradient(145deg, #000000, #111111, #000000);
             text-align: center;
             color: white;
             margin: 0;
@@ -86,7 +86,7 @@ src="https://www.facebook.com/tr?id=1735225596980897&ev=PageView&noscript=1"
         }
 
         .cta-btn {
-            background-color: #04833c;
+            background-color: #ff4701;
             color: white;
             padding: 25px 50px;
             font-size: 24px;
