--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@ src="https://www.facebook.com/tr?id=1735225596980897&ev=PageView&noscript=1"
    <style>
         body {
             font-family: 'Montserrat', sans-serif;
-            background: linear-gradient(145deg, #000000, #111111, #000000);
+            background: linear-gradient(145deg, #1b1b1b, #212121, #2a2a2a);
             text-align: center;
             color: white;
             margin: 0;
