--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@ src="https://www.facebook.com/tr?id=1735225596980897&ev=PageView&noscript=1"
 
 
         .cta-btn:hover {
-            background-color: #0a3718;
+            background-color: #ff4701;
             transform: scale(1.05);
             box-shadow: 0 8px 16px rgba(0, 0, 0, 0.4);
         }
