--- a/index.html
+++ b/index.html
@@ -168,7 +168,8 @@ src="https://www.facebook.com/tr?id=1735225596980897&ev=PageView&noscript=1"
 
         <div class="footer">
             <p style="color: #efb810;">Con tu primer depósito te regalamos $1.000</p>
-            <h1>Mínimo de Carga $1000</h1>
+            <h1>Mínimo de Carga $2000</h1>
+           <h1>CARGA Y RETIRA LAS 24HORAS AL INSTANTE</h1>
         </div>
     </div>
 
